JB: Updates to the header

--- a/capTable_YC.ipynb
+++ b/capTable_YC.ipynb
@@ -5,9 +5,10 @@
    "metadata": {},
    "source": [
     "# Not Too Crazy Cap Table Math\n",
-    "- Author: James Behzadi (Co-founder of [kintell.com](https://kintell.com/))\n",
+    "- Author: James Behzadi (Co-founder of [kintell.com](https://kintell.com/advisors/james-behzadi))\n",
     "- Date: Thu 23 Jan 2020\n",
     "- To understand the code, I recommend reading Example 1 from Appendix II of the YC SAFE User Guide (link [here](https://www.ycombinator.com/docs/Post%20Money%20Safe%20User%20Guide.pdf)).\n",
+    "- Happy to go over the code in a video chat on Kintell (link [here](https://kintell.com/advisors/james-behzadi/not-too-crazy-cap-table-math)).\n",
     "\n",
     "## Disclaimer:\n",
     "- I am not taking any responsibility for you using this. I only share this with an educational mindset on an 'as it is' basis to help founders to get their head around cap table math."
@@ -706,7 +707,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
