JB: Added some more supporting docs

--- a/capTable_YC.ipynb
+++ b/capTable_YC.ipynb
@@ -6,9 +6,7 @@
    "source": [
     "# Not Too Crazy Cap Table Math\n",
     "- Author: James Behzadi (Co-founder of [kintell.com](https://kintell.com/advisors/james-behzadi/not-too-crazy-cap-table-math))\n",
-    "- Date: Thu 23 Jan 2020\n",
-    "- To understand the code, I recommend reading Example 1 from Appendix II of the YC SAFE User Guide (link [here](https://www.ycombinator.com/docs/Post%20Money%20Safe%20User%20Guide.pdf)).\n",
-    "- Happy to go over the code in a video chat on Kintell (link [here](https://kintell.com/advisors/james-behzadi/not-too-crazy-cap-table-math)).\n",
+    "- To understand the code, I recommend watching this video first (link [here](https://youtu.be/Dk6JNTDec9I)).\n",
     "\n",
     "## Disclaimer:\n",
     "- I am not taking any responsibility for you using this. I only share this with an educational mindset on an 'as it is' basis to help founders to get their head around cap table math."
@@ -306,7 +304,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Example 1 (item 2) of Appendix II (page 18)\n",
+    "### Conversion at SAFE Price\n",
+    "Example 1 (item 2) of Appendix II (page 18, link [here](https://www.ycombinator.com/docs/Post%20Money%20Safe%20User%20Guide.pdf))\n",
     "- Both SAFEs convert at Safe price as the post-money valuation is high enough that SAFE caps"
    ]
   },
@@ -496,8 +495,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Example 1 (item 5) of Appendix II (page 21)\n",
-    "- One of the SAFEs convert at Safe price and the other one at Seed round price per share"
+    "### Conversion at higer price\n",
+    "Example 1 (item 5) of Appendix II (page 21, link [here](https://www.ycombinator.com/docs/Post%20Money%20Safe%20User%20Guide.pdf))\n",
+    "- One of the SAFEs converts at the Safe price and the other one at Seed round price per share"
    ]
   },
   {
