--- a/capTable_YC.ipynb
+++ b/capTable_YC.ipynb
@@ -306,7 +306,7 @@
    "source": [
     "### Conversion at SAFE Price\n",
     "Example 1 (item 2) of Appendix II (page 18, link [here](https://www.ycombinator.com/docs/Post%20Money%20Safe%20User%20Guide.pdf))\n",
-    "- Both SAFEs convert at Safe price as the post-money valuation is high enough that SAFE caps"
+    "- Both SAFEs convert at Safe price as the post-money valuation is far enough from the SAFE caps"
    ]
   },
   {
