--- a/capTable_YC.ipynb
+++ b/capTable_YC.ipynb
@@ -418,15 +418,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Model Inputs\n",
-    "- First run the following two cells and then the ones at the top :)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Some boring functions to do the math & graphs"
+    "## Some boring functions to do the math & graphs\n",
+    "- First run the following cell and then the ones at the top :)"
    ]
   },
   {
@@ -705,7 +698,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.3"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
