JB: updated the YC link

--- a/capTable_YC.ipynb
+++ b/capTable_YC.ipynb
@@ -17,7 +17,7 @@
    "metadata": {},
    "source": [
     "### Conversion at SAFE Price\n",
-    "Example 1 (item 2) of Appendix II (page 18, link [here](https://www.ycombinator.com/docs/Post%20Money%20Safe%20User%20Guide.pdf))\n",
+    "Example 1 (item 2) of Appendix II of YC SAFE User Guide (page 18, link [here](https://www.ycombinator.com/documents/))\n",
     "- Both SAFEs convert at Safe price as the post-money valuation is far enough from the SAFE caps"
    ]
   },
