JB: updated the other YC link

--- a/capTable_YC.ipynb
+++ b/capTable_YC.ipynb
@@ -227,7 +227,7 @@
    "metadata": {},
    "source": [
     "### Conversion at higer price\n",
-    "Example 1 (item 5) of Appendix II (page 21, link [here](https://www.ycombinator.com/docs/Post%20Money%20Safe%20User%20Guide.pdf))\n",
+    "Example 1 (item 5) of Appendix II (page 21, link [here](https://www.ycombinator.com/documents/))\n",
     "- One of the SAFEs converts at the Safe price and the other one at Seed round price per share"
    ]
   },
@@ -698,7 +698,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.5.3"
   }
  },
  "nbformat": 4,
