JB: Weird dollar sign issue on Github, I removed $s altogether.

--- a/capTable_YC.ipynb
+++ b/capTable_YC.ipynb
@@ -22,9 +22,9 @@
     "Example 1 (item 2) of Appendix II of YC SAFE User Guide (page 18, link [here](https://www.ycombinator.com/documents/))\n",
     "\n",
     "- 10m shares prior to Safes with 750k in the pool (allocated and promissed)\n",
-    "- Investor A: \\\\$200k @ \\\\$4m Safe, no pro rata\n",
-    "- Investor B: \\\\$800k @ \\\\$8m Safe, yes pro rata\n",
-    "- Series A: \\\\$5m @ \\\\$15m pre-money with 10% increase to the ESOP\n",
+    "- Investor A: 200k @ 4m Safe cap, no pro rata\n",
+    "- Investor B: 800k @ 8m Safe cap, yes pro rata\n",
+    "- Series A: 5m @ 15m pre-money with 10% increase to the ESOP\n",
     "- Both SAFEs convert at Safe price as the post-money valuation is far enough from the SAFE caps"
    ]
   },
@@ -330,7 +330,7 @@
     "### Conversion at higer price\n",
     "Example 1 (item 5) of Appendix II (page 21, link [here](https://www.ycombinator.com/documents/))\n",
     "\n",
-    "- Series Seed: \\\\$2.2m @ \\\\$8.8m pre-money with 10% increase to the ESOP\n",
+    "- Series Seed: 2.2m @ 8.8m pre-money with 10% increase to the ESOP\n",
     "- Post-money valuation of the priced round is too close to one of the safe caps\n",
     "- One of the SAFEs converts at the Safe price and the other one at Seed round price per share"
    ]
