JB: resolving the $ problem with github front-end

--- a/capTable_YC.ipynb
+++ b/capTable_YC.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -96,8 +96,8 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>Entity</th>\n",
-       "      <th>Raise $</th>\n",
-       "      <th>Valuation $</th>\n",
+       "      <th>Raise</th>\n",
+       "      <th>Valuation</th>\n",
        "      <th>Discount %</th>\n",
        "      <th>Pre-SAFE %</th>\n",
        "      <th>Post-SAFE %</th>\n",
@@ -268,47 +268,34 @@
        "</div>"
       ],
       "text/plain": [
-       "               Entity  Raise $ Valuation $ Discount %  Pre-SAFE %  \\\n",
-       "0              Safe A   200000     4000000          0         0.0   \n",
-       "1              Safe B   800000     8000000          0         0.0   \n",
-       "2              Safe C        0           0          0         0.0   \n",
-       "3              Safe D        0           0          0         0.0   \n",
-       "4              Safe E        0           0          0         0.0   \n",
-       "5              Safe F        0           0          0         0.0   \n",
-       "6         Series Seed  4500000    20000000          -         0.0   \n",
-       "7         Early Hires        -           -          -         6.5   \n",
-       "8   Options Available        -           -          -         1.0   \n",
-       "9            Founders        -           -          -        92.5   \n",
-       "10              Total        -           -          -       100.0   \n",
+       "               Entity    Raise Valuation Discount %  Pre-SAFE %  Post-SAFE %  \\\n",
+       "0              Safe A   200000   4000000          0         0.0        5.000   \n",
+       "1              Safe B   800000   8000000          0         0.0       10.000   \n",
+       "2              Safe C        0         0          0         0.0        0.000   \n",
+       "3              Safe D        0         0          0         0.0        0.000   \n",
+       "4              Safe E        0         0          0         0.0        0.000   \n",
+       "5              Safe F        0         0          0         0.0        0.000   \n",
+       "6         Series Seed  4500000  20000000          -         0.0        0.000   \n",
+       "7         Early Hires        -         -          -         6.5        5.525   \n",
+       "8   Options Available        -         -          -         1.0        0.850   \n",
+       "9            Founders        -         -          -        92.5       78.625   \n",
+       "10              Total        -         -          -       100.0      100.000   \n",
        "\n",
-       "    Post-SAFE %   SAFE Shares  Conversion Pro Rata  Final Shares  \\\n",
-       "0         5.000  5.882353e+05  Safe price    False  5.882353e+05   \n",
-       "1        10.000  1.176471e+06  Safe price     True  1.625113e+06   \n",
-       "2         0.000  0.000000e+00           -    False  0.000000e+00   \n",
-       "3         0.000  0.000000e+00           -    False  0.000000e+00   \n",
-       "4         0.000  0.000000e+00           -    False  0.000000e+00   \n",
-       "5         0.000  0.000000e+00           -    False  0.000000e+00   \n",
-       "6         0.000  0.000000e+00           -        -  4.037783e+06   \n",
-       "7         5.525  6.500000e+05           -        -  6.500000e+05   \n",
-       "8         0.850  1.000000e+05           -        -  1.794570e+06   \n",
-       "9        78.625  9.250000e+06           -        -  9.250000e+06   \n",
-       "10      100.000  1.176471e+07           -        -  1.794570e+07   \n",
-       "\n",
-       "    Fully-Diluted %  \n",
-       "0          3.277862  \n",
-       "1          9.055724  \n",
-       "2          0.000000  \n",
-       "3          0.000000  \n",
-       "4          0.000000  \n",
-       "5          0.000000  \n",
-       "6         22.500000  \n",
-       "7          3.622037  \n",
-       "8         10.000000  \n",
-       "9         51.544377  \n",
-       "10       100.000000  "
+       "     SAFE Shares  Conversion Pro Rata  Final Shares  Fully-Diluted %  \n",
+       "0   5.882353e+05  Safe price    False  5.882353e+05         3.277862  \n",
+       "1   1.176471e+06  Safe price     True  1.625113e+06         9.055724  \n",
+       "2   0.000000e+00           -    False  0.000000e+00         0.000000  \n",
+       "3   0.000000e+00           -    False  0.000000e+00         0.000000  \n",
+       "4   0.000000e+00           -    False  0.000000e+00         0.000000  \n",
+       "5   0.000000e+00           -    False  0.000000e+00         0.000000  \n",
+       "6   0.000000e+00           -        -  4.037783e+06        22.500000  \n",
+       "7   6.500000e+05           -        -  6.500000e+05         3.622037  \n",
+       "8   1.000000e+05           -        -  1.794570e+06        10.000000  \n",
+       "9   9.250000e+06           -        -  9.250000e+06        51.544377  \n",
+       "10  1.176471e+07           -        -  1.794570e+07       100.000000  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -350,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -416,8 +403,8 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>Entity</th>\n",
-       "      <th>Raise $</th>\n",
-       "      <th>Valuation $</th>\n",
+       "      <th>Raise</th>\n",
+       "      <th>Valuation</th>\n",
        "      <th>Discount %</th>\n",
        "      <th>Pre-SAFE %</th>\n",
        "      <th>Post-SAFE %</th>\n",
@@ -588,18 +575,18 @@
        "</div>"
       ],
       "text/plain": [
-       "               Entity      Raise $ Valuation $ Discount %  Pre-SAFE %  \\\n",
-       "0              Safe A       200000     4000000          0         0.0   \n",
-       "1              Safe B       800000     8000000          0         0.0   \n",
-       "2              Safe C            0           0          0         0.0   \n",
-       "3              Safe D            0           0          0         0.0   \n",
-       "4              Safe E            0           0          0         0.0   \n",
-       "5              Safe F            0           0          0         0.0   \n",
-       "6         Series Seed  1.97336e+06    11000000          -         0.0   \n",
-       "7         Early Hires            -           -          -         6.5   \n",
-       "8   Options Available            -           -          -         1.0   \n",
-       "9            Founders            -           -          -        92.5   \n",
-       "10              Total            -           -          -       100.0   \n",
+       "               Entity        Raise Valuation Discount %  Pre-SAFE %  \\\n",
+       "0              Safe A       200000   4000000          0         0.0   \n",
+       "1              Safe B       800000   8000000          0         0.0   \n",
+       "2              Safe C            0         0          0         0.0   \n",
+       "3              Safe D            0         0          0         0.0   \n",
+       "4              Safe E            0         0          0         0.0   \n",
+       "5              Safe F            0         0          0         0.0   \n",
+       "6         Series Seed  1.97336e+06  11000000          -         0.0   \n",
+       "7         Early Hires            -         -          -         6.5   \n",
+       "8   Options Available            -         -          -         1.0   \n",
+       "9            Founders            -         -          -        92.5   \n",
+       "10              Total            -         -          -       100.0   \n",
        "\n",
        "    Post-SAFE %   SAFE Shares  Conversion Pro Rata  Final Shares  \\\n",
        "0      4.983245  5.882353e+05  Safe price    False  5.882353e+05   \n",
@@ -628,7 +615,7 @@
        "10       100.000000  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -648,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -680,8 +667,8 @@
     "    a4 = dic['earlyHiresShares']\n",
     "    a5a = dic['preSafeESOP']; a5b = esopShares\n",
     "    a6 = dic['foundersShares']\n",
-    "    df.loc[df.Entity == 'Series Seed', 'Raise $'] = sAprice * df.loc[df.Entity == 'Series Seed', 'Final Shares']\n",
-    "    df.loc[df.Entity == 'Series Seed', 'Valuation $'] = dic['postM']\n",
+    "    df.loc[df.Entity == 'Series Seed', 'Raise'] = sAprice * df.loc[df.Entity == 'Series Seed', 'Final Shares']\n",
+    "    df.loc[df.Entity == 'Series Seed', 'Valuation'] = dic['postM']\n",
     "    df.loc[nSafes+1] = ['Early Hires', '-', '-', '-', a4/preSafeCap*100, a4/postSafeCap*100, \n",
     "                        a4, '-', '-', a4, a4/finalCap*100]\n",
     "    df.loc[nSafes+2] = ['Options Available', '-', '-', '-', a5a/preSafeCap*100, a5a/postSafeCap*100, \n",
@@ -830,8 +817,8 @@
     "        \n",
     "    df = pd.DataFrame(OrderedDict((\n",
     "        ('Entity', ['Safe A', 'Safe B', 'Safe C', 'Safe D', 'Safe E', 'Safe F']),\n",
-    "        ('Raise $', [safeRaise[0], safeRaise[1], safeRaise[2], safeRaise[3], safeRaise[4], safeRaise[5]]),\n",
-    "        ('Valuation $', [safeCap[0], safeCap[1], safeCap[2], safeCap[3], safeCap[4], safeCap[5]]),\n",
+    "        ('Raise', [safeRaise[0], safeRaise[1], safeRaise[2], safeRaise[3], safeRaise[4], safeRaise[5]]),\n",
+    "        ('Valuation', [safeCap[0], safeCap[1], safeCap[2], safeCap[3], safeCap[4], safeCap[5]]),\n",
     "        ('Discount %', [safeDiscountPer100[0], safeDiscountPer100[1], safeDiscountPer100[2], \n",
     "                        safeDiscountPer100[3], safeDiscountPer100[4], safeDiscountPer100[5]]),\n",
     "        ('Pre-SAFE %', [0, 0, 0, 0, 0, 0]),\n",
