JB: Improved the description of 'rough math' for vanilla examples.

--- a/capTable_YC.ipynb
+++ b/capTable_YC.ipynb
@@ -32,7 +32,9 @@
     "- Investor B: 100k @ 10m Safe cap, no pro rata\n",
     "- Investor C: 1m @ 5m priced round (no ESOP increase)\n",
     "\n",
-    "Rough math: Prior to priced round, investors A and B hold 2% and 1% stake respectively. After this priced round, investor A will still hold their 2%, but investor B's stake grows to 2% due to downround."
+    "**Rough math:** \n",
+    "- Prior to priced round, investors A and B hold 2% and 1% stake respectively. \n",
+    "- After the priced round, investor A will still hold their 2%, but investor B's stake grows to 2% due to downround."
    ]
   },
   {
@@ -337,7 +339,11 @@
     "## Flat ESOP Examples\n",
     "---\n",
     "### Example 2 (medium valuation)\n",
-    "Now let's say priced round happens at 10m. Investor C's stake will be 10% fully diluted, therefore this dilutes investor A down from 2% to 1.8%, i.e. 10% of 2% = 0.2%. Note that Investor B will end up with 1% fully diluted because priced round happens exactly on the mark of 10m."
+    "Now let's say priced round happens with 1m at 10m. \n",
+    "\n",
+    "**Rough math:**\n",
+    "- Investor C's stake will be 10% fully diluted, therefore this dilutes investor A down from 2% to 1.8%, i.e. 10% of 2% = 0.2%. \n",
+    "- Note that Investor B will end up with 1% fully diluted because priced round happens exactly on the mark of 10m."
    ]
   },
   {
@@ -624,8 +630,10 @@
     "## Flat ESOP Examples\n",
     "---\n",
     "### Example 3 (high valuation)\n",
-    "Now let's say priced round happens at 20m. Investor C's stake will be 5% fully diluted which dilutes both investors A and B by 5%: \n",
+    "Now let's say priced round happens with 1m at 20m. \n",
     "\n",
+    "**Rough math:**\n",
+    "- Investor C's stake will be 5% fully diluted which dilutes both investors A and B by 5%: \n",
     "- Investor A's 2% will go down to 1.9%, i.e. 5% of 2% = 0.1%. \n",
     "- Investor B's 1% will go down to 0.95%, i.e. 5% of 1% = 0.05%."
    ]
